# GalapagOS

./: .gitignore  Procfile  README.md  Vagrantfile  overview.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  lint.yml  pythonapp.yml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
client/: package.json
server/: app.py  pyproject.toml
src/: app.py  db.py  main.py  readunio.py  util.py
src/assets/html/: dashboard.html  worldwind.html
src/assets/js/: dashlocal-map.js  worldwind.min.js
src/database/: app.py  test.db
src/database/static/css/: main.css
src/database/templates/: base.html  index.html
src/pages/: empty.py  map.py  overview.py  sensors.py  simulation.py  tables.py
src/pages/components/: card.py  component.py  orientation.py  row.py
src/simulations/: gps.yaml  orientation.yaml  random_sensor_data.yaml
