[tool.poetry]
name = "galapagos"
version = "0.0.1"
description = "A dash/plotly server for Endeavour's Darwin Rocket."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dash = "^1.7"
plotly = "^4.3"
gunicorn = "^20.0"
dash-dangerously-set-inner-html = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
flake8 = "^3.7"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
