[tool.poetry]
name = "galapagos-server"
version = "0.0.1"
description = "The server component of GalapagOS."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1"
Flask-Cors = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
